Ajustes no header

--- a/TP_10355_11156/CSS/main.css
+++ b/TP_10355_11156/CSS/main.css
@@ -35,8 +35,15 @@ header section h1
 
 header section img
 {
+  margin-top: 2px;
   margin-left: 4px;
   margin-right: 2px;
+  margin-bottom: 2px;
+
+}
+
+header .sideleft img
+{
   border-radius: 50%;
 }
 
