--- a/TP_10355_11156/CSS/main.css
+++ b/TP_10355_11156/CSS/main.css
@@ -6,14 +6,13 @@
 html, body {
   width: 100%;
   height: 100%;
-  background-color:  #566573 ;
 }
 
 header
 {
   display: flex;
   justify-content: space-around;
-  background-color: #eaecee;
+  background-color:  	#DCDCDC;
 }
 
 header section
@@ -42,10 +41,47 @@ header section img
 
 }
 
-header .sideleft img
+header .headerSideRight img
 {
   border-radius: 50%;
 }
 
+body .main
+{
+  height: 100%;
+  width: 100%;  
+}
+
+body .main .searchBox
+{
+  height: 25%;
+  width: 100%;
+  min-height: fit-content; /* check if work's !!! */
+  background-color:  #333333;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+body .main .gifBox
+{ 
+  height: 75%;
+  width: 100%;
+  min-height: fit-content; /* check if work's !!! */
+  background-color: #111111 ;
+}
 
 
+
+body .main .searchBox h1
+{
+  color: white;
+  font-family: Arial, Helvetica, sans-serif ;
+}
+
+
+body .main .searchBox .search
+{
+ margin-top: 10px;
+}
