--- a/TP_10355_11156/CSS/main.css
+++ b/TP_10355_11156/CSS/main.css
@@ -23,13 +23,14 @@ header section
   
 }
 
-header section h1
+header section h1, a
 {
   font-size: 12px;
   color:  #566573 ;
   font-family: Arial, Helvetica, sans-serif ;
   margin-left: 4px;
   margin-right: 4px;
+  text-decoration: none;
 }
 
 header section img
@@ -54,9 +55,8 @@ body .main
 
 body .main .searchBox
 {
-  height: 25%;
+  height: 20%;
   width: 100%;
-  min-height: fit-content; /* check if work's !!! */
   background-color:  #333333;
   display: flex;
   flex-direction: column;
@@ -66,9 +66,8 @@ body .main .searchBox
 
 body .main .gifBox
 { 
-  height: 75%;
+  height: 80%;
   width: 100%;
-  min-height: fit-content; /* check if work's !!! */
   background-color: #111111 ;
 }
 
@@ -83,5 +82,38 @@ body .main .searchBox h1
 
 body .main .searchBox .search
 {
- margin-top: 10px;
+ margin-top: 20px;
+ display: flex;
+ flex-direction: row;
+ width: 30%;
+}
+
+
+.search .searchBar 
+{
+  padding-left: 8px;
+  width: 100%;
+  height: 30px;
+  border-radius: 15px 0px 0px 15px;
+  border: 2px;
+  color: #DCDCDC;
+}
+
+
+/* Change text color, when clicked */
+.search .searchBar:focus{
+  color: #52FFA8;
+}
+
+
+
+.searchButton
+ {
+  border: 2px ;
+  background: #52FFA8;
+  text-align: center;
+  color: #fff;
+  border-radius: 0px 15px 15px 0px;
+  cursor: pointer;
+  width: 100px;
 }
