--- a/TP_10355_11156/CSS/main.css
+++ b/TP_10355_11156/CSS/main.css
@@ -117,3 +117,39 @@ body .main .searchBox .search
   cursor: pointer;
   width: 100px;
 }
+
+footer {
+  background-color:	#DCDCDC;
+}
+
+footer .infoBox{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  height: 70px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  background-color:	#DCDCDC;
+}
+
+footer .socialBox{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 50px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  background-color:	#DCDCDC;
+}
+
+footer .info{
+  color: #566573;
+}
+
+footer .info{
+  color: #566573;
+}
