--- a/TP_10355_11156/CSS/main.css
+++ b/TP_10355_11156/CSS/main.css
@@ -64,13 +64,6 @@ body .main .searchBox
   align-items: center;
 }
 
-body .main .gifBox
-{ 
-  height: 80%;
-  width: 100%;
-  background-color: #111111 ;
-}
-
 
 
 body .main .searchBox h1
@@ -93,7 +86,7 @@ body .main .searchBox .search
 {
   padding-left: 8px;
   width: 100%;
-  height: 30px;
+  height: 20px;
   border-radius: 15px 0px 0px 15px;
   border: 2px;
   color: #DCDCDC;
@@ -106,7 +99,6 @@ body .main .searchBox .search
 }
 
 
-
 .searchButton
  {
   border: 2px ;
@@ -117,6 +109,62 @@ body .main .searchBox .search
   cursor: pointer;
   width: 100px;
 }
+
+body .main .gifBox
+{ 
+  height: 80%;
+  width: 100%;
+  background-color: #111111 ;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  flex-direction: column;
+}
+
+
+
+body .main .gifBox .gifButtons
+{
+  height: 20%;
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.gifButtons .refreshButton
+{
+  width: 35px;
+  height: 35px;
+  background: #52FFA8;
+  border-radius: 50% ;
+  border: none;
+}
+
+.gifButtons .trendingButton, .sportsButton, .funnyButton 
+{
+  width: 70px;
+  height: 35px;
+  color:  #566573 ;
+  background: white;
+  border: 2px #52FFA8 solid;
+  text-align: center;
+}
+
+
+
+body .main .gifBox .gifShowBox 
+ {
+  width: 60%;
+  height: 75%;
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px solid red;
+
+}
+
+
 
 footer {
   background-color:	#DCDCDC;
