Pesquisa de Gif's e a obtenção do JSON

--- a/TP_10355_11156/CSS/main.css
+++ b/TP_10355_11156/CSS/main.css
@@ -164,6 +164,15 @@ body .main .gifBox .gifShowBox
 
 }
 
+.gifShowBox .gif
+{
+  width: 100px;
+  height: 100px;
+
+  background-position: center;
+  background-size: contain;
+}
+
 
 
 footer {
@@ -201,3 +210,4 @@ footer .info{
 footer .info{
   color: #566573;
 }
+
